--- a/style.css
+++ b/style.css
@@ -30,16 +30,24 @@
   #budget-wrapper {
     width: 100%;
     height: auto;
-    padding: 2.5rem 5rem;
+    padding: 0.01rem 2.5rem;
   }
   
   .budget-container {
     width: 100%;
     height: 100px;
-    padding: 10px;
+    padding: 1rem 2.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    left: 0;
+    z-index: 2;
+  }
+
+  .budget-container.scroll{
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.795);
+    transition: all .45s linear;
   }
   
   .budget-btns {
@@ -85,7 +93,7 @@
     top: 0;
     left: 0;
     display: none;
-    z-index: 1;
+    z-index: 2;
   }
   
   .add-expense-form {
@@ -127,11 +135,11 @@
     left: 0;
   }
   
-  add-expense-form h1 {
+  .add-expense-form h1 {
     font-size: 20px;
   }
 
-  add-budget-form h1 {
+  .add-budget-form h1 {
     font-size: 20px;
   }
   
@@ -271,8 +279,9 @@
     display: grid;
     place-items: center;
     padding: 40px 80px;
-    position: relative;
+    position: absolute;
     z-index: 1;
+    top: 0;
   }
 
   .add-new-expense{
@@ -292,13 +301,14 @@
   }
 
   .budgets{
+    min-height: 500px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* grid-template-rows: repeat(2, 250px); */
     gap: 20px;
     width: 100%;
-    position: relative;
-    top: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 0;
   }
 
@@ -397,6 +407,14 @@
     z-index: 2;
   }
 
+  .budget-wrapper{
+    width: 100%;
+    min-height: 1000px;
+    position: relative;
+    min-height: 510px;
+    margin-top: 8rem;
+  }
+
   @media only screen and (max-width: 400px){
     #budget-wrapper{
       width: 100%;
@@ -479,6 +497,8 @@
     .add-budget-backdrop {
       width: 100vw;
       transition: all .2s linear;
+      position: relative;
+      z-index: 2;
     }
 
     .table-row{
